force-app/main/default/objects/animalos__Referral__c/fields/aos_How_Stray_Was_Found__c.field-meta.xml
<CustomField>
    <fullName>aos_How_Stray_Was_Found__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>How Stray Was Found</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACO Pick Up</fullName>
            </value>
            <value>
                <fullName>Council Ranger Seized</fullName>
            </value>
            <value>
                <fullName>Council Surrender</fullName>
            </value>
            <value>
                <fullName>DOA&apos;s</fullName>
            </value>
            <value>
                <fullName>Found by Member of Public</fullName>
            </value>
            <value>
                <fullName>Wildlife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>