force-app/main/default/objects/animalos__Referral__c/fields/aos_Interested_in_Wildlife_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>aos_Interested_in_Wildlife_Volunteer__c</fullName>
    <label>Interested in Wildlife Volunteer / Carer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>