force-app/main/default/objects/animalos__Referral__c/fields/aos_LGA__c.field-meta.xml
<CustomField>
    <fullName>aos_LGA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LGA</label>
    <referenceTo>aos_LGA__c</referenceTo>
    <relationshipLabel>Referrals (LGA)</relationshipLabel>
    <relationshipName>aos_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>