force-app/main/default/objects/animalos__Referral__c/fields/aos_Lifestyle__c.field-meta.xml
<CustomField>
    <fullName>aos_Lifestyle__c</fullName>
    <label>Lifestyle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>