force-app/main/default/objects/animalos__Referral__c/fields/aos_Local_Vet__c.field-meta.xml
<CustomField>
    <fullName>aos_Local_Vet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Vet</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Local Vet)</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>