force-app/main/default/objects/animalos__Referral__c/fields/aos_Location_Description__c.field-meta.xml
<CustomField>
    <fullName>aos_Location_Description__c</fullName>
    <label>Location Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>