force-app/main/default/objects/animalos__Referral__c/fields/aos_Location_Information__c.field-meta.xml
<CustomField>
    <fullName>aos_Location_Information__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Location Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>