force-app/main/default/objects/animalos__Referral__c/fields/aos_Location_of_Animal_Night_time__c.field-meta.xml
<CustomField>
    <fullName>aos_Location_of_Animal_Night_time__c</fullName>
    <inlineHelpText>Where will the animal be kept during the night? Is the area and accommodation suitable for the animal?</inlineHelpText>
    <label>Location of Animal (Night time)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>