force-app/main/default/objects/animalos__Referral__c/fields/aos_Mobile__c.field-meta.xml
<CustomField>
    <fullName>aos_Mobile__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <formula>animalos__Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>