force-app/main/default/objects/animalos__Referral__c/fields/aos_Other_Pets_Animals__c.field-meta.xml
<CustomField>
    <fullName>aos_Other_Pets_Animals__c</fullName>
    <inlineHelpText>Are there other pets/animals at the location where the animal will be located? Anything we need to record about them? Would this animal be suitable to house with the other animals/pets at the location?</inlineHelpText>
    <label>Other Pets/Animals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>