force-app/main/default/objects/animalos__Referral__c/fields/aos_Outbound_Reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Outbound_Reason__c</fullName>
    <label>Outbound Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavioural - Rehoming</fullName>
            </value>
            <value>
                <fullName>Data Integrity Clean Up</fullName>
            </value>
            <value>
                <fullName>Deceased - Scientific Purposes</fullName>
            </value>
            <value>
                <fullName>Disaster Evacuation</fullName>
            </value>
            <value>
                <fullName>Endangered Species</fullName>
            </value>
            <value>
                <fullName>External Care Facility</fullName>
            </value>
            <value>
                <fullName>In Shire Council Stray</fullName>
            </value>
            <value>
                <fullName>Interstate Rspca Transfer</fullName>
            </value>
            <value>
                <fullName>Investigation Purposes</fullName>
            </value>
            <value>
                <fullName>Live - Conservation Purposes</fullName>
            </value>
            <value>
                <fullName>Live - Scientific Purposes</fullName>
            </value>
            <value>
                <fullName>Medical / Behavioural - Rehoming</fullName>
            </value>
            <value>
                <fullName>Medical - Rehoming</fullName>
            </value>
            <value>
                <fullName>Palliative Care</fullName>
            </value>
            <value>
                <fullName>Queensland Species Management Plan (qsmp)</fullName>
            </value>
            <value>
                <fullName>Restricted Type</fullName>
            </value>
            <value>
                <fullName>Too Many - Rehoming</fullName>
            </value>
            <value>
                <fullName>Unweaned - Rehoming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>