force-app/main/default/objects/animalos__Referral__c/fields/aos_Owner_Finder_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Owner_Finder_Details__c</fullName>
    <label>Owner/Finder Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>