force-app/main/default/objects/animalos__Referral__c/fields/aos_Owner_Found_Location__c.field-meta.xml
<CustomField>
    <fullName>aos_Owner_Found_Location__c</fullName>
    <label>Owner/Found Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>