force-app/main/default/objects/animalos__Referral__c/fields/aos_Owner_Relinquishment__c.field-meta.xml
<CustomField>
    <fullName>aos_Owner_Relinquishment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Relinquishment</label>
    <type>Checkbox</type>
</CustomField>