force-app/main/default/objects/animalos__Referral__c/fields/aos_Person_Address__c.field-meta.xml
<CustomField>
    <fullName>aos_Person_Address__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <formula>animalos__Contact__r.Full_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Address</label>
    <type>Text</type>
</CustomField>