force-app/main/default/objects/animalos__Referral__c/fields/aos_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_Person_ID__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <formula>animalos__Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person ID</label>
    <type>Text</type>
</CustomField>