force-app/main/default/objects/animalos__Referral__c/fields/aos_Pet_Access__c.field-meta.xml
<CustomField>
    <fullName>aos_Pet_Access__c</fullName>
    <label>Pet Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoor Only</fullName>
            </value>
            <value>
                <fullName>Indoor and Outdoor</fullName>
            </value>
            <value>
                <fullName>Outdoor Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>