force-app/main/default/objects/animalos__Referral__c/fields/aos_Post_Adoption_Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>aos_Post_Adoption_Case_Manager__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Adoption Case Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>aos_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>