force-app/main/default/objects/animalos__Referral__c/fields/aos_Post_Adoption_Contact__c.field-meta.xml
<CustomField>
    <fullName>aos_Post_Adoption_Contact__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Post Adoption Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Survey Sent</fullName>
            </value>
            <value>
                <fullName>Awaiting review of Survey</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>