force-app/main/default/objects/animalos__Referral__c/fields/aos_Postcode_Suburb__c.field-meta.xml
<CustomField>
    <fullName>aos_Postcode_Suburb__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Postcode/Suburb</label>
    <referenceTo>aos_Postcode__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>aos_Referral_Postcodes</relationshipName>
    <type>Lookup</type>
</CustomField>