force-app/main/default/objects/animalos__Referral__c/fields/aos_Programs_Contact__c.field-meta.xml
<CustomField>
    <fullName>aos_Programs_Contact__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programs Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programs Referrals</relationshipLabel>
    <relationshipName>aos_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>