force-app/main/default/objects/animalos__Referral__c/fields/aos_Reason_For_Adoption__c.field-meta.xml
<CustomField>
    <fullName>aos_Reason_For_Adoption__c</fullName>
    <label>Reason For Adoption</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>