force-app/main/default/objects/animalos__Referral__c/fields/aos_Reason_for_Vet_Care__c.field-meta.xml
<CustomField>
    <fullName>aos_Reason_for_Vet_Care__c</fullName>
    <label>Reason for Vet Care</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ECC Care</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>WUF (Diagnostics)</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>