force-app/main/default/objects/animalos__Referral__c/fields/aos_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>aos_Record_Type_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>