force-app/main/default/objects/animalos__Referral__c/fields/aos_Referral_Address__c.field-meta.xml
<CustomField>
    <fullName>aos_Referral_Address__c</fullName>
    <label>Referral Address</label>
    <type>Address</type>
</CustomField>