force-app/main/default/objects/animalos__Referral__c/fields/aos_Referral_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_Referral_ID__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Referral ID</label>
    <type>AutoNumber</type>
</CustomField>