force-app/main/default/objects/animalos__Referral__c/fields/aos_Referral_Reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Referral_Reason__c</fullName>
    <label>Referral Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic violence</fullName>
            </value>
            <value>
                <fullName>Mental health</fullName>
            </value>
            <value>
                <fullName>Owner hospitalised</fullName>
            </value>
            <value>
                <fullName>Owner apprehended</fullName>
            </value>
            <value>
                <fullName>Bushfire</fullName>
            </value>
            <value>
                <fullName>Owner homeless</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>