force-app/main/default/objects/animalos__Referral__c/fields/aos_Registered_Wildlife_Carer__c.field-meta.xml
<CustomField>
    <fullName>aos_Registered_Wildlife_Carer__c</fullName>
    <label>Registered Wildlife Carer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>