force-app/main/default/objects/animalos__Referral__c/fields/aos_Registered_Wildlife_Organisation__c.field-meta.xml
<CustomField>
    <fullName>aos_Registered_Wildlife_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registered Wildlife Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Registered Wildlife Organisation)</relationshipLabel>
    <relationshipName>Wildlife_Referrals_From_Registered_Carer</relationshipName>
    <type>Lookup</type>
</CustomField>