force-app/main/default/objects/animalos__Referral__c/fields/aos_Released_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>aos_Released_By_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Released By Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals (Released By Contact)</relationshipLabel>
    <relationshipName>Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>