force-app/main/default/objects/animalos__Referral__c/fields/aos_Released_By_User__c.field-meta.xml
<CustomField>
    <fullName>aos_Released_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Released By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>aos_Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>