force-app/main/default/objects/animalos__Referral__c/fields/aos_Royal_Canin_s_Healthy_Pets_Club_Opt__c.field-meta.xml
<CustomField>
    <fullName>aos_Royal_Canin_s_Healthy_Pets_Club_Opt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be written back to the contact record of the adopter.</description>
    <inlineHelpText>This field will be populated from the Adoption Agreement should the adopter Opt In and be updated onto the Contact as per Third Party Marketing Opt Out.</inlineHelpText>
    <label>Royal Canin’s Healthy Pets Club Opt In?</label>
    <type>Checkbox</type>
</CustomField>