force-app/main/default/objects/animalos__Referral__c/fields/aos_Signature_URL__c.field-meta.xml
<CustomField>
    <fullName>aos_Signature_URL__c</fullName>
    <label>Signature URL</label>
    <type>Url</type>
</CustomField>