force-app/main/default/objects/animalos__Referral__c/fields/aos_Special_Behaviour_Experience__c.field-meta.xml
<CustomField>
    <fullName>aos_Special_Behaviour_Experience__c</fullName>
    <label>Special Behaviour Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>