force-app/main/default/objects/animalos__Referral__c/fields/aos_Street__c.field-meta.xml
<CustomField>
    <fullName>aos_Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>