force-app/main/default/objects/animalos__Referral__c/fields/aos_Suburb__c.field-meta.xml
<CustomField>
    <fullName>aos_Suburb__c</fullName>
    <formula>aos_Postcode_Suburb__r.aos_Suburb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suburb</label>
    <type>Text</type>
</CustomField>