force-app/main/default/objects/animalos__Referral__c/fields/aos_Surrender_Reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Surrender_Reason__c</fullName>
    <label>Surrender Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned by Original Owner</fullName>
            </value>
            <value>
                <fullName>Aged</fullName>
            </value>
            <value>
                <fullName>Aggressive to People</fullName>
            </value>
            <value>
                <fullName>Aggressive to Dogs</fullName>
            </value>
            <value>
                <fullName>Aggressive to Other Animals</fullName>
            </value>
            <value>
                <fullName>Allergies to pet</fullName>
            </value>
            <value>
                <fullName>Anxious - Animal</fullName>
            </value>
            <value>
                <fullName>Cannot Afford Basic Care (food, vaccines, etc.)</fullName>
            </value>
            <value>
                <fullName>Death of Owner</fullName>
            </value>
            <value>
                <fullName>Destructive Behaviour</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Want</fullName>
            </value>
            <value>
                <fullName>Escaping Behaviour</fullName>
            </value>
            <value>
                <fullName>Excessive Barking</fullName>
            </value>
            <value>
                <fullName>Fearful Behaviour</fullName>
            </value>
            <value>
                <fullName>Going on Holidays</fullName>
            </value>
            <value>
                <fullName>Homeless</fullName>
            </value>
            <value>
                <fullName>Inappropriate Urination or Defecation</fullName>
            </value>
            <value>
                <fullName>Incompatible Activity Level</fullName>
            </value>
            <value>
                <fullName>Moving</fullName>
            </value>
            <value>
                <fullName>New Baby or Pregnant Owner</fullName>
            </value>
            <value>
                <fullName>No Time for Animal</fullName>
            </value>
            <value>
                <fullName>Not Compatible with Children</fullName>
            </value>
            <value>
                <fullName>Not Compatible with Existing Animals</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Owner Going into Care Facility</fullName>
            </value>
            <value>
                <fullName>Owner is Too Ill to Care For Animal</fullName>
            </value>
            <value>
                <fullName>Pets No Longer Allowed At Residence</fullName>
            </value>
            <value>
                <fullName>Relationship Breakdown</fullName>
            </value>
            <value>
                <fullName>Rescued From Neglectful Situation</fullName>
            </value>
            <value>
                <fullName>Too Big</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>