force-app/main/default/objects/animalos__Referral__c/fields/aos_Surrender_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Surrender_Reason_Details__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Surrender Reason Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>