force-app/main/default/objects/animalos__Referral__c/fields/aos_Surrender_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Surrender_Type__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Surrender Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veterinary assistance</fullName>
            </value>
            <value>
                <fullName>Behavioural support</fullName>
            </value>
            <value>
                <fullName>Financial support</fullName>
            </value>
            <value>
                <fullName>Life circumstance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>