force-app/main/default/objects/animalos__Referral__c/fields/aos_Surrender_Type_Reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Surrender_Type_Reason__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Surrender Type Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>aos_Surrender_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I can’t afford my veterinary fees</fullName>
            </value>
            <value>
                <fullName>They keep having unwanted litters</fullName>
            </value>
            <value>
                <fullName>They are destructive</fullName>
            </value>
            <value>
                <fullName>They bark too much</fullName>
            </value>
            <value>
                <fullName>They have shown some aggression</fullName>
            </value>
            <value>
                <fullName>They keep on escaping</fullName>
            </value>
            <value>
                <fullName>They do not obey commands</fullName>
            </value>
            <value>
                <fullName>They don&apos;t get along with my other animals</fullName>
            </value>
            <value>
                <fullName>I can&apos;t afford them</fullName>
            </value>
            <value>
                <fullName>I&apos;m moving</fullName>
            </value>
            <value>
                <fullName>I&apos;m renting and unable to take them with me</fullName>
            </value>
            <value>
                <fullName>I have too many pet/s</fullName>
            </value>
            <value>
                <fullName>I don&apos;t have time to look after them</fullName>
            </value>
            <value>
                <fullName>I&apos;m allergic</fullName>
            </value>
            <value>
                <fullName>They are a stray</fullName>
            </value>
            <value>
                <fullName>Unwanted gift</fullName>
            </value>
            <value>
                <fullName>Owner has sadly passed away</fullName>
            </value>
            <value>
                <fullName>Abandoned by original owner/Rescued from neglectful situation</fullName>
            </value>
            <value>
                <fullName>Animal aged</fullName>
            </value>
            <value>
                <fullName>Animal is Anxious/Fearful</fullName>
            </value>
            <value>
                <fullName>Inappropriate Urination or defecation</fullName>
            </value>
            <value>
                <fullName>Homeless</fullName>
            </value>
            <value>
                <fullName>Incompatible Activity Level</fullName>
            </value>
            <value>
                <fullName>New baby or owner pregnant</fullName>
            </value>
            <value>
                <fullName>Owner going into care facility</fullName>
            </value>
            <value>
                <fullName>Relationship Breakdown</fullName>
            </value>
            <value>
                <fullName>Owner Ill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>