force-app/main/default/objects/animalos__Referral__c/fields/aos_Tag_Number__c.field-meta.xml
<CustomField>
    <fullName>aos_Tag_Number__c</fullName>
    <label>Tag Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>