force-app/main/default/objects/animalos__Referral__c/fields/aos_Total_Children__c.field-meta.xml
<CustomField>
    <fullName>aos_Total_Children__c</fullName>
    <inlineHelpText>Total number of children located where the animal will be housed.</inlineHelpText>
    <label>Total Children</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>