force-app/main/default/objects/animalos__Referral__c/fields/aos_Total_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>aos_Total_Time_Days__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <formula>IF(ISBLANK(animalos__Date_Returned__c),
TODAY() - animalos__Date_Collected__c,
IF(OR(animalos__Date_Returned__c = animalos__Date_Collected__c, animalos__Date_Collected__c = TODAY()), 1,
animalos__Date_Returned__c - animalos__Date_Collected__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>