force-app/main/default/objects/animalos__Referral__c/fields/aos_Training_Did_Not_Work__c.field-meta.xml
<CustomField>
    <fullName>aos_Training_Did_Not_Work__c</fullName>
    <label>Training Did Not Work</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>