force-app/main/default/objects/animalos__Referral__c/fields/aos_Training_Worked__c.field-meta.xml
<CustomField>
    <fullName>aos_Training_Worked__c</fullName>
    <label>Training Worked</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>