force-app/main/default/objects/animalos__Referral__c/fields/aos_Trial_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>aos_Trial_End_Date_Time__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <description>If this is a trial adoption, then set this to the end date when the trial period is due to end.</description>
    <inlineHelpText>If this is a trial adoption, then set this to the end date when the trial period is due to end.</inlineHelpText>
    <label>Trial End Date Time</label>
    <type>DateTime</type>
</CustomField>