force-app/main/default/objects/animalos__Referral__c/fields/aos_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Type__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bird</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Cattle</fullName>
            </value>
            <value>
                <fullName>Crab/Fish</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Farm</fullName>
            </value>
            <value>
                <fullName>Ferret</fullName>
            </value>
            <value>
                <fullName>Fowl</fullName>
            </value>
            <value>
                <fullName>Goat</fullName>
            </value>
            <value>
                <fullName>Guinea Pig</fullName>
            </value>
            <value>
                <fullName>Horse</fullName>
            </value>
            <value>
                <fullName>Insect / Arachnid</fullName>
            </value>
            <value>
                <fullName>Kitten</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Native Amphibians</fullName>
            </value>
            <value>
                <fullName>Native Birds</fullName>
            </value>
            <value>
                <fullName>Native Mammal</fullName>
            </value>
            <value>
                <fullName>Native Marsupial</fullName>
            </value>
            <value>
                <fullName>Native Monotreme</fullName>
            </value>
            <value>
                <fullName>Native Reptiles</fullName>
            </value>
            <value>
                <fullName>Non Native Amphibians</fullName>
            </value>
            <value>
                <fullName>Non Native Birds</fullName>
            </value>
            <value>
                <fullName>Non Native Mammals</fullName>
            </value>
            <value>
                <fullName>Non Native Reptiles</fullName>
            </value>
            <value>
                <fullName>Pig</fullName>
            </value>
            <value>
                <fullName>Puppy</fullName>
            </value>
            <value>
                <fullName>Rabbit</fullName>
            </value>
            <value>
                <fullName>Rodent</fullName>
            </value>
            <value>
                <fullName>Sheep</fullName>
            </value>
            <value>
                <fullName>Zoo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>