force-app/main/default/objects/animalos__Referral__c/fields/aos_Unknown_Contact__c.field-meta.xml
<CustomField>
    <fullName>aos_Unknown_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unknown Contact</label>
    <type>Checkbox</type>
</CustomField>