force-app/main/default/objects/animalos__Referral__c/fields/aos_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>aos_Work_Phone__c</fullName>
    <formula>animalos__Contact__r.npe01__WorkPhone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Phone</label>
    <type>Text</type>
</CustomField>