force-app/main/default/objects/animalos__Referral__c/recordTypes/animalos__Adoption.recordType-meta.xml
<RecordType>
    <fullName>animalos__Adoption</fullName>
    <active>true</active>
    <label>Adoption</label>
</RecordType>